# cs310

./: Cargo.toml  README.md  install_packages.sh  known_issues.md  package-lock.json  package.json  thoughts.md  tsconfig.json
client/: .env  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/src/: file_manager_thread.rs  file_uploader_thread.rs  main.rs  network_task_manager.rs  pipeline_executor_thread.rs  state.rs  state_manager.rs  state_uploader_thread.rs  store_fetcher_thread.rs  task_manager.rs  tauri_commands.rs  video_preview_handler_thread.rs
client/src/classes/: Cache.ts  Clip.ts  Communicator.ts  EventBus.ts  Graph.ts  Node.ts  NodeRegistration.ts  Pipeline.ts  Store.ts  Utils.ts
client/src/components/: PropertiesPanel.tsx  VideoPreview.tsx
client/src/components/MediaImporter/: ClipComponent.tsx  MediaImporter.tsx
client/src/components/NodeEditor/: CustomEdgeComponent.tsx  EditorNodeComponent.tsx  NodeAddMenu.tsx  NodeEditor.tsx  NodeEditorStateManager.tsx
client/src/components/shared/: ClipDropComponent.tsx
client/src/contexts/: NodeEditorContext.tsx  SelectionContext.tsx
server/: .gitignore  Cargo.toml
server/.cargo/: config.toml
server/src/: gst_process.rs  main.rs  state.rs  utility.rs
shared/: .gitignore  Cargo.toml
shared/src/: abstract_pipeline.rs  cache.rs  clip.rs  constants.rs  global.rs  gst_editing_test.rs  lib.rs  networking.rs  node.rs  node_ideas.txt  pipeline.rs  store.rs  task.rs
shared/src/classes/: clip.rs  global.rs  mod.rs  pipeline.rs  state_manager.rs  store.rs
shared/src/classes/nodes/: audio_gain_node.rs  blur_node.rs  concat_node.rs  output_node.rs
shared/src/nodes/: audio_gain_node.rs  blur_node.rs  concat_node.rs  media_import_node.rs  mod.rs  output_node.rs  volume_node.rs
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: file_manager_thread.rs  main.rs  pipeline_executor_thread.rs  state_manager.rs  tauri_commands.rs
src-tauri/src/classes/: abstract_pipeline.rs  clip.rs  global.rs  mod.rs  node.rs  pipeline.rs  store.rs
src-tauri/src/classes/nodes/: audio_gain_node.rs  blur_node.rs  concat_node.rs  media_import_node.rs  mod.rs  output_node.rs
src/classes/: Cache.ts  Clip.ts  Communicator.ts  EventBus.ts  Graph.ts  Lock.ts  Node.ts  NodeRegistration.ts  Pipeline.ts  Store.ts  Utils.ts
src/components/: MediaImporter.tsx  NodeAddMenu.tsx  NodeEditor.tsx  PropertiesPanel.tsx  VideoPreview.tsx  test.md  tests
src/components/MediaImporter/: ClipComponent.tsx  CompositedClipComponent.tsx  MediaImporter.tsx  SourceClipComponent.tsx
src/components/NodeEditor/: CustomEdgeComponent.tsx  EditorNodeComponent.tsx  NodeAddMenu.tsx  NodeEditor.tsx
src/contexts/: StoreContext.tsx
