[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

cs310_shared = {path = "../shared"}
uuid = "0.8"

gstreamer = "0.17.3"
gstreamer-audio = "0.17.2"
gstreamer-video = "0.17.2"
gstreamer-pbutils = "0.17.2"