[package]
name = "cs310_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
petgraph = {version = "0.6.0", features = [ "serde-1"] }
serde_derive = "1.0"
bimap = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
gstreamer = "0.17.3"
rfd = "0.4.3"
dirs = "3.0"

gstreamer-audio = "0.17.2"
gstreamer-video = "0.17.2"
gstreamer-pbutils = "0.17.2"


num-traits = "0.2"
num-derive = "0.2"
enum_primitive = "0.1.1"

[lib]
name = "cs310_shared"
path = "src/lib.rs"