[package]
name = "cs310_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
petgraph = {version = "0.6.0", features = [ "serde-1"] }
serde_derive = "1.0"
bimap = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
dirs = "3.0"

gst = {package = "gstreamer", version = "0.18.0"}
gst-audio = {package = "gstreamer-audio", version = "0.18.0" }
gst-video = {package = "gstreamer-video", version = "0.18.0" }
gst-pbutils = {package = "gstreamer-pbutils", version = "0.18.0"}
ges  = {package = "gstreamer-editing-services",version = "0.18.0" }
glib = "0.15.3"

num-traits = "0.2"
num-derive = "0.2"
enum_primitive = "0.1.1"

once_cell = "1.9.0"

progress-streams = "1.1.0"


[lib]
name = "cs310_shared"
path = "src/lib.rs"