[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc", features = ["api-all"] }
petgraph = {version = "0.6.0", features = [ "serde-1"] }
serde_derive = "1.0"
bimap = "0.6.1"
uuid = "0.8"
gstreamer = "0.17.3"
# rfd = "0.4.3"
dirs = "3.0"
cs310_shared = {path = "../../shared"}

gst = {package = "gstreamer", version = "0.18.0"}
gst-audio = {package = "gstreamer-audio", version = "0.18.0" }
gst-video = {package = "gstreamer-video", version = "0.18.0" }
gst-pbutils = {package = "gstreamer-pbutils", version = "0.18.0"}
ges  = {package = "gstreamer-editing-services",version = "0.18.0" }
glib = "0.15.3"

progress-streams = "1.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
